--- a/src/App.css
+++ b/src/App.css
@@ -21,13 +21,13 @@ body {
 
 .card {
   background: whitesmoke;
-  width: 40%;
-  height: 20%;
+  width: 70%;
+  height: 40%;
   display: flex;
   align-items: center;
   flex-direction: column;
   border-radius: 25px;
-  padding: 2%;
+  padding: 4%;
   box-shadow: 10px 10px;
 }
 
@@ -106,9 +106,28 @@ body {
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media (max-width: 992px) {
   .card {
-    width: 80%;
+    width: 65%;
     height: 30%;
+    padding: 3%;
+  }
+
+  .button {
+    height: 100px;
+    width: 150px;
+  }
+}
+
+@media (max-width: 4800px) {
+  .card {
+    width: 70%;
+    height: 55%;
+    padding: 10%;
+  }
+
+  .button {
+    height: 100px;
+    width: 150px;
   }
 }
